Enum applicant_type {
  INDIVIDUAL
  LEGAL_ENTITY
}

Enum request_status {
  CREATED
  PROCESSING
  COMPLETED
  FAILED
  CANCELLED
  MANUAL_REVIEW
}

Enum decision_type {
  APPROVE
  DECLINE
  REFER
  COUNTER_OFFER
}

Enum rule_type {
  KNOCKOUT
  POLICY
}

Enum policy_status {
  DRAFT
  ACTIVE
  ARCHIVED
}

Enum rule_status {
  ACTIVE
  INACTIVE
}

Enum address_type {
  REGISTRATION
  RESIDENTIAL
  LEGAL
  ACTUAL
}

Table applicants {
  id uuid [pk]

  applicant_type applicant_type [not null]
  phone varchar
  email varchar
  created_at timestamp [not null]
}

Table legal_entities {
  applicant_id uuid unique [pk]

  company_name varchar [not null]
  inn varchar [not null]
  ogrn varchar
  registration_date date
  
  annual_revenue decimal [not null]  
  net_profit decimal [not null]        

  created_at timestamp [not null]
}

Table individual_applicants {
  applicant_id uuid [pk]

  first_name varchar [not null]
  last_name varchar [not null]
  middle_name varchar

  monthly_income decimal [not null]

  birth_date date [not null]
  citizenship varchar [not null]

  passport_series varchar [not null]
  passport_number varchar [not null]
  passport_issue_date date
  passport_issuer varchar

  created_at timestamp [not null]
}

Ref: applicants.id - individual_applicants.applicant_id
Ref: applicants.id - legal_entities.applicant_id

Table addresses {
  id uuid [pk]

  region varchar
  city varchar
  street varchar
  house varchar
  apartment varchar
  postal_code varchar
  latitude decimal
  longitude decimal
  created_at timestamp
}

Table applicant_addresses {
  id uuid [pk]

  applicant_id uuid [not null]
  address_id uuid [not null]
  address_type address_type [not null]

}

Ref: applicant_addresses.applicant_id > applicants.id
Ref: applicant_addresses.address_id > addresses.id

Table decision_requests {
  id uuid [pk]

  applicant_id uuid [not null]
  credit_policy_id uuid [not null]
  requested_amount decimal [not null]
  requested_term integer [not null]
  processing_started_at timestamp 
  completed_at timestamp 
  request_status request_status [not null]

  score decimal
  pd decimal
  pti decimal

  created_at timestamp [not null]
}

Table decisions {
  id uuid [pk]

  decision_request_id uuid [not null]
  decision_type decision_type [not null]
  approved_limit decimal
  interest_rate decimal
  explanation text
  created_at timestamp [not null]
}

Table credit_policies {
  id uuid [pk]

  name varchar [not null]
  version varchar [not null]
  status policy_status [not null]
  effective_from timestamp [not null]
  effective_to timestamp
  created_at timestamp [not null]
}

Table rule_execution_results {
  id uuid [pk]

  decision_request_id uuid [not null]
  rule_document_id varchar [not null]
  rule_type rule_type [not null]
  decision_type decision_type [not null]
  created_at timestamp [not null]
}

Ref: rule_execution_results.decision_request_id > decision_requests.id

Table reason_codes {
  id uuid [pk]
  code varchar unique [not null]
  description text [not null]
}

Table decision_reason_codes {
  decision_id uuid [not null]
  reason_code_id uuid [not null]
}

Ref: decision_requests.applicant_id > applicants.id

Ref: decision_requests.credit_policy_id > credit_policies.id

Ref: decisions.decision_request_id - decision_requests.id

Ref: decision_reason_codes.decision_id > decisions.id

Ref: decision_reason_codes.reason_code_id > reason_codes.id